// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AnchoredQueryTimer matches snapshot with execution 1`] = `
<div
  class="bp6-button-group execution-timer-panel"
>
  <button
    class="bp6-button bp6-minimal timer"
    type="button"
  >
    <span
      aria-hidden="true"
      class="bp6-icon bp6-icon-stopwatch"
    >
      <svg
        data-icon="stopwatch"
      />
    </span>
    <span
      class="bp6-button-text"
    >
      3.00s
    </span>
  </button>
  <button
    class="bp6-button bp6-minimal"
    type="button"
  >
    <span
      aria-hidden="true"
      class="bp6-icon bp6-icon-cross"
    >
      <svg
        data-icon="cross"
      />
    </span>
  </button>
</div>
`;

exports[`AnchoredQueryTimer matches snapshot with startTime 1`] = `
<div
  class="bp6-button-group execution-timer-panel"
>
  <button
    class="bp6-button bp6-minimal timer"
    type="button"
  >
    <span
      aria-hidden="true"
      class="bp6-icon bp6-icon-stopwatch"
    >
      <svg
        data-icon="stopwatch"
      />
    </span>
    <span
      class="bp6-button-text"
    >
      1.00s
    </span>
  </button>
  <button
    class="bp6-button bp6-minimal"
    type="button"
  >
    <span
      aria-hidden="true"
      class="bp6-icon bp6-icon-cross"
    >
      <svg
        data-icon="cross"
      />
    </span>
  </button>
</div>
`;
